--- a/package.json
+++ b/package.json
@@ -1,20 +1,33 @@
 {
-  "name": "creator-labs",
-  "version": "0.1.0",
+  "name": "vimeo-aframe",
+  "version": "0.2.0",
   "private": true,
+  "scripts": {
+    "start": "node server.js",
+    "dev": "concurrently \"nodemon server.js\" \"watchify src/index.js -o dist/vimeo.aframe.js -v\"",
+    "build": "browserify src/index.js | uglifyjs --source-map --output dist/vimeo.aframe.min.js",
+    "standard": "standard src/**/*.js spec/*.js --fix",
+    "test": "jasmine"
+  },
   "dependencies": {
     "aframe-video-illumination-component": "^1.0.1",
     "axios": "^0.17.1",
-    "dotenv": "^5.0.1",
+    "concurrently": "^4.0.1",
     "express": "^4.16.4",
     "jsx-loader": "^0.13.2",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
-    "vimeo": "^1.2.1",
-    "webpack": "^3.12.0"
+    "vimeo": "^1.2.1"
   },
-  "scripts": {
-    "build": "webpack",
-    "start": "webpack && node server.js"
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babelify": "^10.0.0",
+    "browserify": "^16.2.3",
+    "dotenv": "^5.0.1",
+    "jasmine": "^3.3.0",
+    "nodemon": "^1.18.6",
+    "standard": "^12.0.1",
+    "uglify-js": "^3.4.9",
+    "watchify": "^3.11.0"
   }
 }
